Disable reference support
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>